# FTC-CENTERSTAGE

./: .gitignore  Working-Parking-Auto.txt  build.common.gradle  build.dependencies.gradle  build.gradle  clean.sh  settings.gradle
MeepMeepTesting/src/main/java/com/infinitydevtech/meepmeeptesting/: MeepMeepTesting.java
TeamCode/: build.gradle
TeamCode/rust/: Cargo.toml
TeamCode/rust/src/: java_translations.rs  lib.rs  tests.rs
TeamCode/rust/src/threads/: math.rs  mod.rs
TeamCode/src/main/: AndroidManifest.xml
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/: Constants.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/Autonomous/: BlueAuto.kt  BlueAuto252Edition.kt  LeftAuto.kt  RedAuto.kt  RedAuto252Edition.kt  RightAuto.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/DriveModes/: Mecanum.kt  TankDrive.kt  TempTest.kt  TempTestRed.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/RR/: DriveConstants.java  SampleMecanumDrive.java  StandardTrackingWheelLocalizer.java  TwoWheelTrackingLocalizer.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/RR/opmode/: AutomaticFeedforwardTuner.java  BackAndForth.java  DriveVelocityPIDTuner.java  FollowerPIDTuner.java  LocalizationTest.java  ManualFeedforwardTuner.java  MaxAngularVeloTuner.java  (+9 more)
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/Robot/: Arm.kt  ElementDetector.kt  Encoder.kt  Initialize.kt  Intake.kt  Robot.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/freeWifi/Utils/: RustLink.java
