[package]
name = "rust_code" #This is the filename of our .dll
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
threadpool = "1.8.1"
crossbeam-channel = "0.5.8"
serde_json = {version = "1.0"}
serde = {version = "1.0", features = ["derive"]}

[lib]
crate-type = ["cdylib"]
